2006-01-02  Henrique Romano  <henrique@async.com.br>

	* ChangeLog: initial revision of Changelog file.